tests/negative/AmbiguousConstructor.juvix
module AmbiguousConstructor;
  module M;
    type T1 :=
      A : T1;
    open T1 public;
  end;

  module N;
    type T2 :=
      A : T2;
    open T2 public;
  end;

  open M;
  open N;

  f : T1 -> T2
   | A := N.A;
end;
